Converting chronometer to countdown

--- a/src/app/chronometer/chronometer.component.html
+++ b/src/app/chronometer/chronometer.component.html
@@ -3,8 +3,7 @@
         <h1>Le chronomètre</h1>
         <hr>
         <h1>
-            <span class="label label-primary">{{chronometer.minutes}}</span> minutes
-            <span class="label label-primary">{{chronometer.secondes}}</span> secondes
+            <span class="label label-primary">{{chronometer.getTime()}}</span>
         </h1>
         <br>
         <p>
