--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -5,14 +5,9 @@
     width: 100%;
 }
 
-#main-timer {
-    margin: 0 auto;
-    display: block;
-}
-
-#current-time {
+#timer {
     font-size: 24px;
-    color: black;
+    text-align: center;
 }
 
 #init-time {
@@ -22,7 +17,6 @@
 }
 
 #fab-timer {
-
     display: block;
     button {
         margin: 0 auto;
