Adding firebase to handle set of theme

--- a/src/app/theme/theme-set-list.component.html
+++ b/src/app/theme/theme-set-list.component.html
@@ -1,5 +1,5 @@
 <md-list>
-  <md-list-item *ngFor="let set of sets | async">
+  <md-list-item *ngFor="let set of sets | async" routerLink="/theme_set/{{set.$key}}">
     <md-icon md-list-icon>folder</md-icon>
     <h4 md-line>{{set.name}}</h4>
   </md-list-item>
