--- a/src/app/theme/theme-set-composer.component.html
+++ b/src/app/theme/theme-set-composer.component.html
@@ -1,11 +1,12 @@
 <div class="container flex">
-  <md-input-container class="example-full-width">
-      <input class="text-center" mdInput #themeInput type="text">
-  </md-input-container>
-  <br/>
-  <button md-raised-button (click)="addTheme()">Add</button>
-  <br/>
-  <md-list id="theme-list">
+  <div class="flex-static-header container flex">
+    <md-input-container class="example-full-width">
+        <input class="text-center" mdInput #themeInput type="text">
+    </md-input-container>
+    <br/>
+    <button md-raised-button (click)="addTheme()">Add</button>
+  </div>
+  <md-list id="theme-list" class="flex-relative-content">
     <md-list-item class="text-center" *ngFor="let theme of themes | async">
       <h4 md-line>{{theme.$value}}</h4>
     </md-list-item>
