--- a/src/app/theme/theme-set-list.component.html
+++ b/src/app/theme/theme-set-list.component.html
@@ -1,6 +1,14 @@
-<md-list>
-  <md-list-item *ngFor="let set of sets | async" routerLink="/theme_set/{{set.$key}}">
-    <md-icon md-list-icon>folder</md-icon>
-    <h4 md-line>{{set.name}}</h4>
-  </md-list-item>
-</md-list>
+<md-card class="theme-set-card" *ngFor="let set of sets | async">
+  <md-card-header>
+    <md-card-title>{{set.name}}</md-card-title>
+    <md-card-subtitle>2 themes</md-card-subtitle>
+  </md-card-header>
+  <md-card-content>
+    <p>
+      Lorem Ipsum.
+    </p>
+  </md-card-content>
+  <md-card-actions>
+    <button md-button routerLink="/theme_set/{{set.$key}}">COMPOSE</button>
+  </md-card-actions>
+</md-card>
