--- a/src/app/theme/theme.component.scss
+++ b/src/app/theme/theme.component.scss
@@ -4,10 +4,14 @@
 }
 
 .flex {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .text-center {
     text-align: center;
+}
+
+.theme-set-card {
+    margin: 10px;
 }
