--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    font-family: 'roboto'
+    font-family: 'roboto';
+    background-color: #f5f5f5;
+    margin: 0;
 }
